# sandbox

nextjs/bun_nextjs_pages/: bun.lockb  package.json
nextjs/bun_nextjs_tutorial/: bun.lockb  package.json
nextjs/testing/with-playwright-app/: .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
react/vite-react-playground/: bun.lockb  index.html  package.json  script.js  script_async.js  script_async_defer.js  script_defer.js  tsconfig.app.json
react/vite-react-playground/src/: App.tsx  Button.tsx  main.tsx
rust/core/deref/src/: main.rs
rust/di-practice/: .gitignore  Cargo.toml
rust/di-practice/cake-pattern-di/: Cargo.toml
rust/di-practice/cake-pattern-di/src/: lib.rs
rust/di-practice/cake-pattern-di_practice/: Cargo.toml
rust/di-practice/cake-pattern-di_practice/src/: database.rs  lib.rs
rust/di-practice/cake-pattern-di_practice/src/user/: repository.rs  service.rs
rust/di-practice/constructor-di/: Cargo.toml
rust/di-practice/constructor-di/src/: lib.rs
rust/di-practice/dynamic-constructor-di/: Cargo.toml
rust/di-practice/function-di/: Cargo.toml
rust/di-practice/function-di/src/: lib.rs  main.rs
rust/di-practice/reader-di/: Cargo.toml
rust/di-practice/reader-di/src/: lib.rs
rust/di-practice/shaku-di/: Cargo.toml
rust/di-practice/shaku-di/src/: lib.rs
rust/di-practice/static-constructor-di/: Cargo.toml
rust/di-practice/static-constructor-di/src/: lib.rs
rust/gnuplot/: Cargo.toml
rust/gnuplot/tutorial/: Cargo.toml
rust/leaky_bucket/: Cargo.toml
rust/leaky_bucket/tutorial/: Cargo.toml
rust/macro_rules/src/: main.rs
rust/memory_layout/: Cargo.toml  README.md
rust/memory_layout/examples/: slice.rs  string.rs
rust/mistral.rs/: .gitignore  Cargo.toml
rust/mistral.rs/gguf_locally/: Cargo.toml  get_tokenizers_json.py
rust/mistral.rs/gguf_locally/chat_templates/: chatml.json  default.json  llama2.json
rust/mistral.rs/gguf_locally/src/: main.rs
rust/mistral.rs/isq/: Cargo.toml
rust/mistral.rs/isq/src/: main.rs
rust/nom/: Cargo.toml
rust/nom/tutorial/: Cargo.toml
rust/petgraph/: Cargo.toml
rust/petgraph/algo/: Cargo.toml
rust/pin_project/: Cargo.toml
rust/pin_project/tutorial/: Cargo.toml
rust/serde/: Cargo.toml
rust/serde/enums/: Cargo.toml
rust/serde/json/: Cargo.toml
rust/sled/: Cargo.toml
rust/sled/structured/: Cargo.toml
rust/tokio/: Cargo.toml
rust/tokio/async-await/: Cargo.toml
rust/tokio/channels_client/: Cargo.toml
rust/tokio/my-redis/: Cargo.toml
(+35 files in other folders)
