[workspace]
members = [
  "common",
  "constructor-di",
  "dynamic-constructor-di",
  "static-constructor-di",
  "cake-pattern-di",
  "cake-pattern-di_practice", "function-di", "reader-di", "shaku-di",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
actix-web = "4"
serde = "1.0.152"
serde_derive = "1.0.152"
